fix: user search to display results in correct order
resolved #154